<resources>
    <string name="app_name">Upsilon</string>
    <string name="aboutTitleText">About us.</string>
    <string name="aboutText">
        <p align="justify">
        Upsilon is an organisation that glorifies the learning and teaching experience for everyone.
        </p>
        \n\n
        <p align="justify">
        We at Upsilon are a group of IIT Madras students who have built this application that guides a student to learn from the best suitable teacher, either online or offline,
        and also helps the teachers reach the appropriate students.
        </p>
        \n\n
        <p align="justify">
        We believe that the learning process should never be affected no matter what crisis befalls and hence, we provide Upsilon, a remedy to all the common problems faced by the
        educational system.
        </p>
        \n\n
        <p align="justify">
        <b>What do we feature?</b>
        \n\n
        Trouble finding the right? We search for the best suited courses and compare them for you. Find the right teacher in the right medium to learn from.
        \n
        Are you a teacher? Struggling to find students? Upsilon provides you with a student base and also provides the right support to enhance your teaching experience.
        \n
        Courses in the app can be ranked in several categories based on user choices so that you get the best out of what you wish for.
        \n
        </p>
        \n\n
        <p align="justify">
        <b>Meet our team</b>
        </p>
        \n\n
        <p align="justify">
        Sanchit Gupta, Student in B Tech at the IIT Madras institute.
        </p>
        \n\n
        <p align="justify">
        Vedant Saboo, Student in B Tech at the IIT Madras institute.
        </p>
        \n\n
        <p align="justify">
        <b>Thanks for downloading the app!</b>
        </p>
    </string>
    <string name="top_rated_tutors_string">Top Rated Tutors :</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title_text">LOGIN TO PROCEED</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="signup_text">
        New here? <font color="#B0003153"><u>Create an account!</u></font>
    </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="google_icon">Google Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_a_member">Already a member ? Log in</string>
    <string name="resume_learning">Resume Learning</string>
    <string name="recommended_for_you">Courses By Your Colleagues And Seniors</string>
    <string name="explore">Explore</string>
    <string name="server_client_id">374851941944-mte178498m02ggiej5lf18on6rabl4qs.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2494834144152310</string>
    <string name="fb_login_protocol_scheme">fb2494834144152310</string>
    <string name="skip_setup">Skip Setup</string>
    <string name="select_later">Select Later</string>
    <string name="sports">Sports</string>
    <string name="co_curricular">Co-Curricular</string>
    <string name="academics">Academics</string>
    <string name="welcome_to_upsilon">Welcome to Upsilon</string>
    <string name="tell_us_about_your_interests">Tell us about your interests.</string>
    <string name="tell_us_about_yourselves">Tell us about yourselves.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_an_optional_profile_photo">Add an optional profile photo</string>
    <string name="your_name_and_photo_will_be_visible_to_your_teachers">Your name and photo will be visible to your teachers</string>
    <string name="personalize_your_learning">Personalize your learning.</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="use_phone_location">Use Phone Location</string>
    <string name="enter_city">Enter City</string>
    <string name="why_should_i_share_my_location">Why should I share my location?</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="we_never_share_these_details_without_your_permission">We never share these details without your permission.</string>
    <string name="next">Next</string>
    <string name="add_course_details">Add Course Details</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="course_duration">Course Duration</string>
    <string name="class_hours">Class Hours (Approx.)</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="grouped_classes">Grouped Classes</string>
    <string name="individual">Individual</string>
    <string name="number_of_batches">Number of batches</string>
    <string name="teach_for_free">Teach for free</string>
    <string name="charge_a_fee">Charge a fee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="teach_at_upsilon">Teach At Upsilon</string>
    <string name="your_active_courses">Your Active Courses.</string>
    <string name="your_time_with_us">Your Time With Us</string>
    <string name="add_new_course">Add a new course</string>
    <string name="temp_course_details">T</string>
    <string name="register">Register</string>
    <string name="enter_your_pincode">Enter your pincode</string>
    <string name="selected_course">Selected Course</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="home">HOME</string>
    <string name="add_introductory_content">Add Introductory Content</string>
    <string name="courses_taught">Courses Taught</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="number_of_courses_taken">Number of Courses Taken</string>
    <string name="phone">Phone</string>
    <string name="number_of_courses_taught">Number of Courses Taught</string>
    <string name="your_profile">Your Profile</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="add_interest">Add Interest</string>
    <string name="select_your_college">Select Your College</string>
    <string name="class_information">Class Information</string>
    <string name="upload_resources">Upload Resources</string>
    <string name="class_meeting_link">Class meeting link</string>
    <string name="next_lecture_on">Next Lecture On</string>
    <string name="course_details">Course Details</string>
    <string name="course_resources">Course Resources</string>
    <string name="new_registrations_closed">New Registrations Closed</string>
    <string name="accepting_registrations_now">Accepting Registrations Now</string>
    <string name="course_home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="resources">Resources</string>
    <string name="write_a_review">Write a review</string>
    <string name="prompt_fees">Enter fees you wish to charge</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_course_rating">Enter course rating (out of 5)</string>
    <string name="submit_review">Submit Review</string>
    <string name="free">Free</string>
    <string name="Forum">Forum</string>
    <string name="type_a_message">Type a message</string>
    <string name="refresh">Refresh</string>
    <string name="view_your_profile">View Your Profile</string>
    <string name="teach_a_new_course">Teach a new course</string>
    <string name="add_video">Add Video</string>
    <string name="add_image">Add Image</string>
    <string name="add_document">Add Document</string>
    <string name="upload_and_proceed">Upload and Proceed</string>
    <string name="amount_once_deducted_can_be_refunded_only_within_one_week_of_payment">Amount once deducted can be refunded only within one week of payment.</string>
    <string name="info_about_course_instructor">Info about course instructor</string>
    <string name="see_location_of_offline_course">See Location of offline course</string>
    <string name="reviews">Reviews</string>
    <string name="register_now">Register Now!</string>
    <string name="list_of_registered_students">List of Registered Students</string>
    <string name="update_link">Update Link</string>
    <string name="schedule_class">Schedule Class</string>
    <string name="accept_new_registrations">Accept New Registrations</string>
    <string name="schedule">Schedule</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="settings">Settings</string>
    <string name="drop_the_course">Drop the course</string>
</resources>