<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomNavMenuSchedule"
        android:enabled="true"
        android:icon="@drawable/icon_calendar"
        android:title="@string/schedule"/>
    <item
        android:id="@+id/bottomNavMenuHome"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/course_home"/>
    <item
        android:id="@+id/bottomNavMenuForum"
        android:enabled="true"
        android:icon="@drawable/icon_forum"
        android:title="@string/Forum"/>
    <item
        android:id="@+id/bottomNavMenuTestsAssignments"
        android:enabled="true"
        android:icon="@drawable/icon_assignment"
        android:title="Tests and Assignments"/>
</menu>