<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomNavMenuScheduleTeacher"
        android:enabled="true"
        android:icon="@drawable/icon_calendar"
        android:title="@string/schedule"/>
    <item
        android:id="@+id/bottomNavMenuHomeTeacher"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/course_home"/>
<!--    <item-->
<!--        android:id="@+id/bottomNavMenuNotificationsTeacher"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/icon_notifications"-->
<!--        android:title="@string/notifications"/>-->
    <item
        android:id="@+id/bottomNavMenuResourcesTeacher"
        android:enabled="true"
        android:icon="@drawable/icon_folder"
        android:title="Resources"/>
    <item
        android:id="@+id/bottomNavMenuForumTeacher"
        android:enabled="true"
        android:icon="@drawable/icon_forum"
        android:title="@string/Forum"/>
    <item
        android:title="Assignments"
        android:id="@+id/assignments_tests"
        android:icon="@drawable/icon_assignment"
        />
</menu>